Completed Edit and Delete Route

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "path-to-regexp": "^6.2.0",
     "qrcode": "^1.5.4",
     "qrcode-reader": "^1.0.4",
     "react-qr-reader": "^3.0.0-beta-1",
